# tasft

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  TASFT_TECHNICAL_DEEP_DIVE.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
axolotl_plugin/: __init__.py  plugin.py
configs/: llama3_8b_medqa.yaml  qwen25_7b_code.yaml  qwen25_7b_humaneval.yaml
scripts/: eval.py  export_bundle.py  reproduce.py  run_e2e_validation.py  train.py
tasft/: __init__.py  exceptions.py  types.py
tasft/bundle/: __init__.py  bundle_schema.py  export.py
tasft/eval/: __init__.py  gate_quality.py  long_context_bench.py  task_eval.py  throughput_bench.py
tasft/inference/: __init__.py  tasft_model.py  vllm_compat.py  vllm_patch.py
tasft/kernels/: __init__.py  block_sparse_fa.py  kernel_config.py
tasft/modules/: __init__.py  attn_gate.py  tasft_attention.py
tasft/observability/: __init__.py  alerts.py  logging.py  metrics.py  tracing.py
tasft/training/: __init__.py  layer_rotation.py  objectives.py  trainer.py
tests/: __init__.py
tests/benchmarks/: __init__.py  bench_attn_gate.py  bench_eval_harness.py  bench_performance_profile.py  bench_training_step.py
tests/chaos/: __init__.py  (+3 more)
validation_reports/: architecture_compliance.md  axiom_compliance.md  eval_harness_audit.md  implementation_completeness.md  loss_formula_audit.md  numerical_correctness.md  observability_audit.md  performance_profile.md  pipeline_validation.md  schema_audit.md  triton_kernel_audit.md  vllm_audit.md
(+25 files in other folders)
